Fixed Safari overflow bug

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -14,7 +14,7 @@ $hamburger-layer-spacing: 5px;
   width: 100%;
   padding: 20px;
   background-color: #FFF;
-  overflow: hidden;
+  overflow: visible;
   position: sticky;
   position: -webkit-sticky;
   top: 0;
